# hieroglyphic-cosmos

./: .gitignore  CONTENT-LICENSE.md  LICENSE  NOTICE.md  README.md  pee1.py  pyproject.toml
data/raw/jsesh_glyphs/: clean_svgs.py  find_glyphs.sh  find_missing_glyphs.sh
data/stellar_oli/: prepare_glyphs.py
docs/: 100-analysis.md  100-claude.md  100-glyph-chatgpt.md  100-glyph-claude.md  100-glyph-gemini.md  100-glyph-grok.md  100-glyph-promp.md  100-references.md  20250827-affordable-svg-costs.md  20250827-affordable-svg.md  50-glyph.md  hieroglyph-star-mappings.md  methodology.md  three-tier-scale.md  workflow.md
src/: galactic_coords.py  hieroglyphic_cosmos.py  mapping_engine.py  simbad_star_glyphs.py  star_checker.py  star_glyphs.py  svg_to_png.py  verify
src/utils/: star_checker.py  svg_to_png.py
