[project]
name = "hieroglyphic-cosmos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "cairosvg>=2.8.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
]
[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "preserve"
